Kubernetes/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: production
spec:
  selector:
    app: frontend
  ports:
  - name: login
    port: 3000
    targetPort: 3000
  - name: module-manager-grud
    port: 3001
    targetPort: 3001
  #type: LoadBalancer
